# middleware/validate.js
@@ -1,0 +1,50 @@
+const validator = require('../helper/validate');
+
+const saveUser = (req, res, next) => {
+  const validationRule = {
+    firstName: 'required|string',
+    lastName: 'required|string',
+    email: 'required|email',
+    password: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+
+const saveBook = (req, res, next) => {
+  const validationRule = {
+    title: 'required|string',
+    author: 'required|string',
+   genre: 'required|string',
+      pageCount: 'required|number',
+      published: 'required|number',
+      printType: 'required|string',
+    readStatus: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+
+module.exports = {
+  saveUser, saveBook
+};
