# models/users.js
@@ -1,4 +1,5 @@
 const mongoose = require('mongoose');
+const bcrypt = require('bcrypt');
 
 const userSchema = mongoose.Schema({
     firstName: {
@@ -16,6 +17,15 @@ const userSchema = mongoose.Schema({
     password: {
         type: String,
         required: true
+    }
+});
+
+
+userSchema.pre('save', async function (next) {
+    if (this.isModified('password')) {
+        const hashedPassword = await bcrypt.hash(this.password, 10);
+        this.password = hashedPassword;
+        next();
     }
 });
 
